# green-agent

./: README.md  mock_purple.py  pyproject.toml  request.json  scenario.toml  send_eval.py
.github/workflows/: test-and-publish.yml
src/: agent.py  helpers.py  server.py
